@@ -12,6 +12,8 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Add a warning when asserting a non-empty tuple which is always true.
+
 - Issue #2179: speed up with statement execution by storing the exit method
   on the stack instead of in a temporary variable (patch by Jeffrey Yaskin)
 
